--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
                 <%= link_to "Profile", edit_user_registration_path, class: "nav-link" %>
               </li>
               <li class="nav-item">
-                <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link"  %>
+                <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :get }, class: "nav-link"  %>
               </li>
             <% else %>
               <li class="nav-item">
