add keyword table model controller view with specs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <link rel="icon" href="/icon.png" type="image/png">
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
@@ -20,6 +21,11 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <%= link_to "Google Scraper", root_path, class: "navbar-brand" %>
+        <ul class="nav">
+          <li class="nav-item">
+            <%= link_to "Keywords", keywords_path, data: { turbo_method: :get }, class: "nav-link"  %>
+          </li>
+        </ul>
 
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto">
