added google scrapper code and sidekiq for bg job

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center">Welcome to MyApp</h1>
+<h1 class="text-center">Welcome to Google Scraper</h1>
 
 <% if user_signed_in? %>
   <p class="text-center">Hello, <%= current_user.email %>!</p>
