--- a/app/views/keywords/show.html.erb
+++ b/app/views/keywords/show.html.erb
@@ -5,6 +5,10 @@
     </div>
     <div class="card-body">
       <p><strong>Keyword:</strong> <%= @keyword.name %></p>
+      <p><strong>Total Ads:</strong> <%= @keyword.total_ads %></p>
+      <p><strong>Total Links:</strong> <%= @keyword.total_links %></p>
+      <p><strong>Total Results:</strong> <%= @keyword.total_results %></p>
+      <p><strong>Html Code:</strong><iframe class="html-content-frame" srcdoc="<%= raw @keyword.html.gsub('"', '&quot;') %>"></iframe></p>
 
       <div class="mt-4">
         <a href="<%= keywords_path %>" class="btn btn-secondary">
