--- a/app/views/keywords/index.html.erb
+++ b/app/views/keywords/index.html.erb
@@ -4,13 +4,16 @@
     <%= link_to "Upload Csv", new_keyword_path, class: "btn btn-primary" %>
   </div>
 
-  <% if @keywords.any? %>
+  <% if @keywords&.any? %>
     <div class="table-responsive">
       <table class="table table-hover shadow-sm">
         <thead class="table-dark">
           <tr>
             <th>#</th>
             <th>Keyword</th>
+            <th>Total Ads</th>
+            <th>Total Links</th>
+            <th>Total Search Results</th>
             <th>Actions</th>
           </tr>
         </thead>
@@ -19,6 +22,9 @@
               <tr>
                 <td><%= link_to index + 1, keyword_path(keyword) %></td>
                 <td><%= link_to keyword.name, keyword_path(keyword), class: "d-block text-dark text-decoration-none" %></td>
+                <td><%= keyword.total_ads %></td>
+                <td><%= keyword.total_links %></td>
+                <td><%= keyword.total_results %></td>
                 <td>
                   <%= button_to "Delete", keyword_path(keyword), 
                     method: :delete, 
