--- a/app/views/keywords/index.html.erb
+++ b/app/views/keywords/index.html.erb
@@ -19,18 +19,19 @@
         </thead>
         <tbody id="keyword-list">
           <% @keywords.each_with_index do |keyword, index| %>
-              <tr>
-                <td><%= link_to index + 1, keyword_path(keyword) %></td>
-                <td><%= link_to keyword.name, keyword_path(keyword), class: "d-block text-dark text-decoration-none" %></td>
+              <tr data-link="<%= keyword_path(keyword) %>">
+                <td><%= index + 1 %></td>
+                <td><%= keyword.name %></td>
                 <td><%= keyword.total_ads %></td>
                 <td><%= keyword.total_links %></td>
                 <td><%= keyword.total_results %></td>
-                <td>
-                  <%= button_to "Delete", keyword_path(keyword), 
-                    method: :delete, 
-                    data: { confirm: "Are you sure?" }, 
-                    class: "btn btn-sm btn-danger"
-                  %>
+                <td class="action-items">
+                  <%= link_to keyword_refresh_path(keyword), class: "btn btn-primary", title: 'Click to refresh the result' do %>
+                    <i class="bi bi-arrow-clockwise"></i>
+                  <% end %>
+                  <%= button_to keyword_path(keyword), method: :delete, class: "btn btn-danger" do %>
+                    <i class="bi bi-trash"></i>
+                  <% end %>
                 </td>
               </tr>
           <% end %>
