--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,13 +1,98 @@
 .html-content-frame {
-    width: 100%;
-    height: auto;
-    min-height: 500px;
-    border: none;
-    overflow: hidden;
+  width: 100%;
+  height: auto;
+  min-height: 500px;
+  border: none;
+  overflow: hidden;
 }
 
 .action-items {
-    display: flex;
-    justify-content: space-evenly;    
+  display: flex;
+  justify-content: space-evenly;    
 }
 
+.search-form{
+  position: relative;
+  padding: 100px;
+  padding-bottom: unset;
+  text-align:center;
+}
+
+.search-form input{
+  width: 60%;
+  padding: 0 30px;
+  border-radius: 50px;
+  font-weight: 600;
+  font-size: 16px;
+  position: relative;
+  height: 66px;
+}
+
+.search-form button{
+  position: relative;
+  right: 107px;
+  height: 60px;
+  border-radius: 50px;
+  border: none;
+  width: 100px;
+}
+
+.search-container {
+  max-width: 600px;
+  margin: 20px auto;
+}
+
+.search-input {
+  width: 100%;
+  height: 45px;
+  font-size: 16px;
+  padding: 10px;
+}
+
+.search-btn {
+  height: 45px;
+  font-size: 16px;
+}
+
+.result-container {
+  max-width: 800px;
+  margin: auto;
+  padding-top: 20px;
+}
+
+.welcome-message {
+  margin-right: 8rem;
+}
+
+.result-item {
+  margin-bottom: 15px;
+}
+
+.result-item a {
+  font-size: 18px;
+  font-weight: bold;
+  color: #1a0dab;
+  text-decoration: none;
+}
+
+.result-title {
+  text-transform: capitalize;  
+}
+
+.result-item a:hover {
+  text-decoration: underline;
+}
+
+.result-url {
+  color: #006621;
+  font-size: 14px;
+}
+
+.result-description {
+  color: #545454;
+  font-size: 14px;
+
+  a {
+    font-size: 12px;
+  }
+}
