--- a/app/views/keywords/index.html.erb
+++ b/app/views/keywords/index.html.erb
@@ -1,49 +1,51 @@
-<div class="container mt-4">
-  <div class="d-flex justify-content-between align-items-center mb-3">
-    <h2>Keywords</h2>
-    <%= link_to "Upload Csv", new_keyword_path, class: "btn btn-primary" %>
-  </div>
+<div class="col-md-12">
+  <div class="container mt-4">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+      <h2>Keywords</h2>
+      <%= link_to "Upload Csv", new_keyword_path, class: "btn btn-primary" %>
+    </div>
 
-  <% if @keywords&.any? %>
-    <div class="table-responsive">
-      <table class="table table-hover shadow-sm">
-        <thead class="table-dark">
-          <tr>
-            <th>#</th>
-            <th>Keyword</th>
-            <th>Total Ads</th>
-            <th>Total Links</th>
-            <th>Total Search Results</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody id="keyword-list">
-          <% @keywords.each_with_index do |keyword, index| %>
-              <tr data-link="<%= keyword_path(keyword) %>">
-                <td><%= index + 1 %></td>
-                <td><%= keyword.name %></td>
-                <td><%= keyword.total_ads %></td>
-                <td><%= keyword.total_links %></td>
-                <td><%= keyword.total_results %></td>
-                <td class="action-items">
-                  <%= link_to keyword_refresh_path(keyword), class: "btn btn-success", title: 'Click to refresh the result' do %>
-                    <i class="bi bi-arrow-clockwise"></i>
-                  <% end %>
-                  <%= button_to keyword_path(keyword), method: :delete, class: "btn btn-danger" do %>
-                    <i class="bi bi-trash"></i>
-                  <% end %>
-                </td>
-              </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-  <% else %>
-    <div class="alert alert-warning text-center">
-      No keywords found. Upload a CSV to get started! <%= link_to new_keyword_path, class: "btn-primary" do %>
-        Add New
-      <% end %>
-    </div>
-  <% end %>
-  <%= paginate @keywords %>
+    <% if @keywords&.any? %>
+      <div class="table-responsive">
+        <table class="table table-hover shadow-sm">
+          <thead class="table-dark">
+            <tr>
+              <th>#</th>
+              <th>Keyword</th>
+              <th>Total Ads</th>
+              <th>Total Links</th>
+              <th>Total Search Results</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="keyword-list">
+            <% @keywords.each_with_index do |keyword, index| %>
+                <tr data-link="<%= keyword_path(keyword) %>">
+                  <td><%= index + 1 %></td>
+                  <td><%= keyword.name %></td>
+                  <td><%= keyword.total_ads %></td>
+                  <td><%= keyword.total_links %></td>
+                  <td><%= keyword.total_results %></td>
+                  <td class="action-items">
+                    <%= link_to keyword_refresh_path(keyword), class: "btn btn-success", title: 'Click to refresh the result' do %>
+                      <i class="bi bi-arrow-clockwise"></i>
+                    <% end %>
+                    <%= button_to keyword_path(keyword), method: :delete, class: "btn btn-danger" do %>
+                      <i class="bi bi-trash"></i>
+                    <% end %>
+                  </td>
+                </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    <% else %>
+      <div class="alert alert-warning text-center">
+        No keywords found. Upload a CSV to get started! <%= link_to new_keyword_path, class: "btn-primary" do %>
+          Add New
+        <% end %>
+      </div>
+    <% end %>
+    <%= paginate @keywords %>
+  </div>
 </div>
