create api's with version and spec

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="<%= @search.present? ? "col-md-8" : "col-md-12 search-padding" %>">
   <div class="search-form text-center">
-    <% if @search.nil? %>
+    <% if @search.blank? %>
       <h1 class="welcome-message">Welcome to My Scraper</h1>
     <% end %>
 
