deployment fixes as per herokus

--- a/app/views/keywords/index.html.erb
+++ b/app/views/keywords/index.html.erb
@@ -21,8 +21,8 @@
           <tbody id="keyword-list">
             <% @keywords.each_with_index do |keyword, index| %>
                 <tr data-link="<%= keyword_path(keyword) %>">
-                  <td><%= index + 1 %></td>
-                  <td><%= keyword.name %></td>
+                  <td><%= link_to index + 1, keyword_path(keyword) %></td>
+                  <td><%= link_to keyword.name, keyword_path(keyword) %></td>
                   <td><%= keyword.total_ads %></td>
                   <td><%= keyword.total_links %></td>
                   <td><%= keyword.total_results %></td>
