update readme file
Update README.md

fix form with behave differently in local vs heroku

Trigger Build

fix style

fix style

fix form

Trigger Build

allow public_file_server

fix assets path

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,4 @@
 @import "bootstrap/bootstrap";
-@import "flash";
-@import "keywords";
+@import "flashscss";
+@import "keywordss";
 @import "custom";
