--- a/app/views/keywords/new.html.erb
+++ b/app/views/keywords/new.html.erb
@@ -10,7 +10,7 @@
             <div class="text-center mb-3">
               <p class="text-muted text-center">Select a CSV file with keywords to process.</p>
             </div>
-            <%= form_with model: @keyword, url: keywords_path, method: :post, local: true, multipart: true, class: "needs-validation", id: "csvUploadForm" do |form| %>
+            <%= form_with model: @keyword, url: keywords_path, method: :post, local: true, multipart: true, class: "needs-validation", id: "csvUploadForm", scope: :keyword do |form| %>
               <div class="mb-3">
                 <%= form.label :file, "Choose CSV File", class: "form-label fw-bold" %>
                 <div class="input-group">
